--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,11 @@ rq==1.1.0
 Werkzeug==0.15.5
 WTForms==2.2.1
 
+
+pytz~=2021.1
+setuptools~=53.0.0
+requests~=2.22.0
+SQLAlchemy~=1.3.8
+yfinance~=0.1.55
+numpy~=1.20.1
+pandas~=1.2.3
