--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==1.1.1
 itsdangerous==1.1.0
-jsonpickle==1.2
 raygun4py==4.3.0
 redis==3.3.8
 rq==1.1.0
@@ -15,3 +14,4 @@ SQLAlchemy~=1.3.8
 yfinance~=0.1.55
 numpy~=1.20.1
 pandas~=1.2.3
+sendgrid~=6.6.0
