--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-Flask==1.1.1
-itsdangerous==1.1.0
-raygun4py==4.3.0
-redis==3.3.8
-rq==1.1.0
-Werkzeug==0.15.5
-WTForms==2.2.1
-
-
-pytz~=2021.1
+Flask~=1.1.1
 SQLAlchemy~=1.3.8
-yfinance~=0.1.55
-pandas~=1.2.3
+Werkzeug~=0.15.5
+WTForms~=2.2.1
+itsdangerous~=1.1.0
 sendgrid~=6.6.0
+yfinance~=0.1.63
+pandas~=1.2.3
 python-dateutil~=2.8.0
+pytz~=2021.1
+raygun4py~=4.3.0
+redis~=3.3.8
+rq~=1.1.0
